--- a/src/sass/layout/_profilePage.scss
+++ b/src/sass/layout/_profilePage.scss
@@ -2,10 +2,11 @@
 .ad,
 .compagny,
 .details,
-.application {
-  padding: 2rem 1.5rem;
-  display: flex;
-  flex-direction: column;
+.application
+ {
+  //padding: 2rem 1.5rem;
+  // display: flex;
+  // flex-direction: column;
   & h2 {
     margin-bottom: 0;
     text-align: left;
@@ -13,9 +14,7 @@
 } 
 
 .list {
-  margin-top: 2.5rem;
   //display: none;
-  font-weight: bold;
   line-height: 1.75;
   &--show {
     display: block;
@@ -33,7 +32,6 @@
 }
 
 .inner--profilePage {
-  padding: 3rem 0;
   display: flex;
   flex-direction: column;
 }
@@ -44,8 +42,7 @@
 
 .category > h2 {
   color: var(--color-tertiary);
-  @include respond(desktop){
     text-transform: uppercase;
-  }
+    font-size: 2.2rem;
 }
 
