--- a/src/sass/abstract/_mixins.scss
+++ b/src/sass/abstract/_mixins.scss
@@ -14,17 +14,17 @@ $breakpoint arguement choices:
 
 ORDER: Base + typography > general layout + grid > page layout > components
 
-1em = 16px
+1em = 16px 
 */
 @mixin respond($breakpoint) {
     @if $breakpoint == tab-port {
-        @media only screen and (max-width: 56.25em) { @content };     //900px
+        @media only screen and (min-width: 43em) { @content };     //700px
     }
     @if $breakpoint == tab-land {
-        @media only screen and (max-width: 75em) { @content };    //1200px
+        @media only screen and (min-width: 62em) { @content };    ///992px
     }
     @if $breakpoint == desktop {
-        @media only screen and (min-width: 75.5em) { @content };    //1800
+        @media only screen and (min-width: 75em) { @content };    //1200px
     }
 }
 @mixin flexAllCenter {
