--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -15,16 +15,16 @@ html {
   font-size: 62.5%;
   @include respond(tab-land) {
     // width < 1200?
-    font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
+    font-size: 65%; 
   }
 
   @include respond(tab-port) {
     // width < 900?
-    font-size: 50%; //1 rem = 8px, 8/16 = 50%
+    font-size: 65%; 
   }
 
   @include respond(desktop) {
-    font-size: 70%; // 
+    font-size: 70%; 
   }
 }
 
