--- a/src/sass/layout/_application.scss
+++ b/src/sass/layout/_application.scss
@@ -17,7 +17,8 @@
 .otherOptions{
     display: flex;
     flex-direction: column;
-    width: max-content;
+    width: 100%;
     justify-content: center;
     align-self: center;
-}
+    margin-top: 2rem;
+} 
